--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
+
 :root {
     --main-border: 3px solid;
     --main-border-radius: 1rem;
 }
 
-body { background-color: bisque;}
+body {
+    box-sizing: border-box;
+    padding: 1rem 0;
+     background-color: bisque;}
 
 
 
@@ -16,13 +24,23 @@ body { background-color: bisque;}
     max-width: 30rem;
     padding: 2rem;
     margin: 0 auto;
+    background-color: #e5e7e9;
 }
 
+.heading {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: .75rem;
+}
+
+.label-span-img {
+    width: 4rem;
+    margin: -1.25rem -.5rem;
+}
 
 .search-form-label {
     text-align: center;
-    font-size: 2.5rem;
-    font-weight: 700;
+ 
 }
 
 .search-form-input {
@@ -37,12 +55,30 @@ body { background-color: bisque;}
     padding: .75rem 2rem;
     font-size: 2rem;
     font-weight: 600;
+    background-color: rgb(159, 174, 224);
     border:  var(--main-border);
     border-radius: var(--main-border-radius);  
 }
 
+.search-form-button:hover {
+    background-color: blue;
+}
+
 .weather-display {
-    padding: .50rem 1.5rem;
+    display: flex;
+    padding: 1.25rem 1.5rem;
     border:  var(--main-border);
     border-radius: var(--main-border-radius); 
+}
+
+.weather-display-img {
+    width: 10rem;
+}
+
+.weather-display-text {
+    font-size: 1.5rem;
+}
+
+.weather-display-text:not(:last-child) {
+    margin-bottom: .5rem;
 }
