--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     max-width: 30rem;
     padding: 2rem;
     margin: 0 auto;
-    background-color: #e5e7e9;
+    background-color: #ccd1d1;
 }
 
 .heading {
@@ -47,8 +47,15 @@ body {
     font-size: 1.5rem;
     padding: .50rem 1.5rem; 
     border:  var(--main-border);
-    border-radius: var(--main-border-radius);  
+    border-radius: var(--main-border-radius);
+    background-color: inherit;  
 }
+
+.search-form-input:focus {
+    background-color:  #f8f9f9; 
+    outline: none; 
+}
+
 
 .search-form-button {
     align-self: flex-end;
@@ -61,7 +68,7 @@ body {
 }
 
 .search-form-button:hover {
-    background-color: blue;
+    background-color: #d6eaf8;
 }
 
 .weather-display {
@@ -82,4 +89,11 @@ body {
 
 .weather-display-text:not(:last-child) {
     margin-bottom: .5rem;
+}
+
+.error-text {
+    color: red;
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
 }
