--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,8 @@
 
 body {
     box-sizing: border-box;
-    padding: 1rem 0;
+    padding: 0;
     background-color: bisque;}
-
 
 
 .search-form {
@@ -108,6 +107,9 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
+    body {
+        padding: 1rem 0;
+    }
     .search-form-button {
         font-size: 2rem;
         font-weight: 600;  
