--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@ body {
 }
 
 .heading {
-    font-size: 3rem;
+    font-size: 2.2rem;
     font-weight: 700;
-    margin-bottom: .75rem;
+    margin-bottom: .5rem;
 }
 
 .label-span-img {
@@ -61,7 +61,7 @@ body {
 .search-form-button {
     align-self: flex-end;
     padding: .5rem 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     background-color: rgb(159, 174, 224);
     border:  var(--main-border);
@@ -82,7 +82,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding: 1.25rem 1.5rem;
+    padding: 1rem 1.5rem;
     border:  var(--main-border);
     border-radius: var(--main-border-radius); 
 }
@@ -115,6 +115,12 @@ body {
         font-weight: 600;  
     }
 
+    .heading {
+        font-size: 3rem;
+        font-weight: 700;
+        margin-bottom: .75rem;
+    }
+    
     .weather-display {
         flex-direction: row;    
     }
